test/SemanticAnalysis/Const/SelfConstConstObject.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// Not yet implemented.
// XFAIL: *

class TestClass(int value) {
	static create = default;
	
	selfconst(int)& get() const {
		return @value;
	}
}

export int f(const TestClass object) {
	// CHECK: .loci:17:2: error: cannot assign non-movable type 'const(int_t)'
	object.get() = 20;
	return object.get();
}

// CHECK: 1 error generated.
